# ArchBuddy

./: README.md  main.py  pyproject.toml  verify_providers.py
Dev/: ArchBuddyDev.ipynb  ArchBuddy_Complete.ipynb  Test_Architecture.ipynb
Dev/core/: schemas.py
core/: execution.py  schemas.py  tools.py  types.py
graph/: builder.py
nodes/: architects.py  iteration.py  supervisor.py  synthesizer.py  validators.py
nodes/aws/: architects.py  validators.py
nodes/azure/: architects.py  validators.py
scripts/: embed_azure_docs.py  verify_azure_embeddings.py
