[project]
name = "archbuddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "jupyterlab>=4.5.3",
    "langchain>=1.2.8",
    "langgraph>=1.0.7",
    "python-dotenv>=1.2.1",
    "langchain-chroma>=0.2.0",
    "langchain-ollama>=0.3.0",
    "langchain-community>=0.3.0",
    "tqdm>=4.67.0",
    "pyyaml>=6.0",
]
